Fix x axis overflowing on mobile

--- a/src/styles/base/_globals.scss
+++ b/src/styles/base/_globals.scss
@@ -1,8 +1,11 @@
 // @use '../abstracts' as *;
 
-body {
-    min-height: 100vh;
+html, body {
+    height: 100%;
     overflow-x: hidden;
+}
+
+body {
     background-color: var(--main-background-color);
     color: var(--primary-text-color);
     -webkit-font-smoothing: antialiased;
@@ -11,7 +14,7 @@ body {
 #root {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 main {
